# syndication-python-template

./: .mise.toml  README.md  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  renovate-config.js
.github/workflows/: python-app.yml  renovate.yml
.helix/: languages.toml
app/: cloudesire_client.py  main.py  test_main.py
