[project]
name = "syndication-python-template"
version = "0.1.0"
description = "Example Python/FastAPI application that handles the Cloudesire syndication API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-slim==0.116.1",
    "httpx==0.28.1",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "respx==0.22.0",
    "ruff==0.12.4",
]
