[project]
name = "syndication-python-template"
version = "0.1.0"
description = "Example Python/FastAPI application that handles the Cloudesire syndication API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-slim==0.129.1",
    "httpx==0.28.1",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "respx==0.23.1",
    "ruff==0.15.10",
]
